# task_service

./: Dockerfile  Makefile  README.md  alembic.ini  docker-compose.yml  pyproject.toml  pytest.ini
alembic/: env.py
alembic/versions/: 19adc0619262_create_tasks_table.py
app/: __init__.py  config.py  logging_config.py
app/api/: __main__.py  deps.py  models.py
app/api/routes/: tasks.py
app/clients/: rabbitmq.py
app/db/: models.py  repository.py  schemas.py  session.py
app/services/: task_service.py
app/tasks/: __init__.py  data_tasks.py  email_tasks.py  failing_tasks.py  image_tasks.py
app/workers/: consumer.py  publisher.py
tests/: conftest.py
tests/integration/: test_api_tasks.py
tests/unit/: test_consumer.py  test_consumer_result_handling.py  test_publisher.py  test_publisher_worker.py  test_repository.py  test_task_implementations.py  test_task_model.py  test_task_registry.py  test_task_service.py
