[project]
name = "tasks-service"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aio-pika>=9.5.8",
    "asyncpg>=0.31.0",
    "fastapi[standard]>=0.124.2",
    "pydantic-settings>=2.12.0",
    "httpx>=0.27.0",
    "aiosqlite>=0.20.0",
    "sqlalchemy>=2.0.45",
    "alembic>=1.17.2",
]

[dependency-groups]
dev = [
    "black>=25.12.0",
    "isort>=7.0.0",
    "psycopg2>=2.9.11",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "pytest-cov>=7.0.0",
]


[tool.black]
line-length = 100

[tool.isort]
line_length = 100